package br.com.catalogo.model;

/**
 * Enum que representa os tipos de item do catálogo.
 */
public enum Tipo {
    LIVRO,
    SERIE,
    FILME
}
